@@ -1,3 +1,12 @@
+2010-06-14  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* Mono.TextEditor.Vi/ViKeyNotation.cs: Really fix the windows
+	  build.
+
+2010-06-14  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* Mono.TextEditor.Vi/ViKeyNotation.cs: Fix windows build.
+
 2010-06-14  Mike Krüger  <mkrueger@novell.com>
 
 	* Mono.TextEditor/TextViewMargin.cs:
